<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AA6C39"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/hubris" />

        <TextView

            android:paddingLeft="15dp"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000" />

    <LinearLayout
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_description"
            android:textSize="16sp"
            android:textColor="#000" />
    </LinearLayout>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/pin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_address"
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:textColor="#000" />

    </LinearLayout>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginRight="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_phone"
            android:fontFamily="monospace"
            android:textSize="16sp"
            android:textColor="#000" />

    </LinearLayout>
    <LinearLayout
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginRight="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/web" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_website"
            android:fontFamily="monospace"
            android:textSize="16sp"
            android:textColor="#000" />

    </LinearLayout>

</LinearLayout>
</ScrollView>
